--- a/src/styles/PrayerTimes.css
+++ b/src/styles/PrayerTimes.css
@@ -111,6 +111,12 @@
   outline-offset: 2px;
 }
 
+.loading {
+  color: #555;
+  font-style: italic;
+  margin-bottom: 15px;
+}
+
 /* Permission Denied Notification */
 .notification-permission {
   background-color: #f8d7da;
